syntax = "proto3";

package astria.protocol.transaction.v1;

import "astria/primitive/v1/rollup_id.proto";

// `RollupDataSubmission` represents a transaction destined for another
// chain, ordered by the sequencer.
//
// It contains the rollup ID of the destination chain, and the
// opaque transaction data.
message RollupDataSubmission {
  astria.primitive.v1.RollupId rollup_id = 1;
  bytes data = 2;
  // the asset used to pay the transaction fee
  string fee_asset = 3;
}
